--- a/TP-LB/tp-A/default.conf
+++ b/TP-LB/tp-A/default.conf
@@ -1,6 +1,6 @@
 upstream loadbalancer {
-        server nginx1:80;
-        server nginx2:80;
+        server nginx1:80 weight=3;
+        server nginx2:80 weight=1;
 }
 server {
         listen 80;
